@@ -17,7 +17,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">cron_form</field>
         </record>
         <record model="ir.action.act_window" id="act_cron_form">
-            <field name="name">Scheduled Actions</field>
+            <field name="name">Actions</field>
             <field name="res_model">ir.cron</field>
             <field name="context"></field>
         </record>
